--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/json/Lexer.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/json/Lexer.vm
@@ -6,18 +6,18 @@ package ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.loader
 import java.util.regex.Pattern
 import java.io.InputStream
 
-public enum class Type {
-    VALUE;
-    LEFT_BRACE;
-    RIGHT_BRACE;
-    LEFT_BRACKET;
-    RIGHT_BRACKET;
-    COMMA;
-    COLON;
-    EOF;
+public object Type {
+    public val VALUE            : Int = 0
+    public val LEFT_BRACE       : Int = 1
+    public val RIGHT_BRACE      : Int = 2
+    public val LEFT_BRACKET     : Int = 3
+    public val RIGHT_BRACKET    : Int = 4
+    public val COMMA            : Int = 5
+    public val COLON            : Int = 6
+    public val EOF              : Int = 42
 }
 
-class Token(val tokenType: Type, val value: Any?) {
+class Token(val tokenType: Int, val value: Any?) {
     fun toString() : String {
         val v = if (value != null) { " (" + value + ")" } else {""}
         val result = tokenType.toString() + v
@@ -29,9 +29,6 @@ public class Lexer(val inputStream : InputStream) {
     val bytes = inputStream.readBytes()
     val EOF = Token(Type.EOF, null)
     var index = 0
-
-    val NUMERIC = Pattern.compile("[-]?[0-9]+")
-    val DOUBLE = Pattern.compile(NUMERIC.toString() + "((\\.[0-9]+)?([eE][-+]?[0-9]+)?)")
 
     fun isSpace(c: Char): Boolean {
         return c == ' ' || c == '\r' || c == '\n' || c == '\t'
@@ -59,16 +56,20 @@ public class Lexer(val inputStream : InputStream) {
     }
 
     fun nextToken() : Token {
+
         if (isDone()) {
             return EOF
         }
+
         var tokenType = Type.EOF
         var c = nextChar()
         var currentValue = StringBuilder()
         var jsonValue: Any? = null
+
         while (! isDone() && isSpace(c)) {
             c = nextChar()
         }
+
         if ('"' == c) {
             tokenType = Type.VALUE
             if (! isDone()) {
@@ -107,17 +108,12 @@ public class Lexer(val inputStream : InputStream) {
                 }
             }
             val v = currentValue.toString()
-            if (NUMERIC.matcher(v).matches()) {
-                jsonValue = java.lang.Integer.parseInt(v)
-            } else if (DOUBLE.matcher(v).matches()) {
-                jsonValue = java.lang.Double.parseDouble(v)
-            } else if ("true".equals(v.toLowerCase())) {
+            if ("true".equals(v.toLowerCase())) {
                 jsonValue = true
             } else if ("false".equals(v.toLowerCase())) {
                 jsonValue = false
             } else {
-                throw RuntimeException("Unexpected characted at position ${index}"
-                    + ": '${c} (${c.toInt()})'")
+                jsonValue = v.toLowerCase()
             }
 
             tokenType = Type.VALUE
