--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/json/Lexer.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/json/Lexer.vm
@@ -6,17 +6,15 @@ package ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.loader
 import java.util.regex.Pattern
 import java.io.InputStream
 
-public class Type {
-    class object {
-        public val VALUE            : Int = 0
-        public val LEFT_BRACE       : Int = 1
-        public val RIGHT_BRACE      : Int = 2
-        public val LEFT_BRACKET     : Int = 3
-        public val RIGHT_BRACKET    : Int = 4
-        public val COMMA            : Int = 5
-        public val COLON            : Int = 6
-        public val EOF              : Int = 42
-    }
+public object Type {
+    public val VALUE            : Int = 0
+    public val LEFT_BRACE       : Int = 1
+    public val RIGHT_BRACE      : Int = 2
+    public val LEFT_BRACKET     : Int = 3
+    public val RIGHT_BRACKET    : Int = 4
+    public val COMMA            : Int = 5
+    public val COLON            : Int = 6
+    public val EOF              : Int = 42
 }
 
 class Token(val tokenType: Int, val value: Any?) {
