--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/json/Lexer.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/json/Lexer.vm
@@ -34,11 +34,11 @@ public class Lexer(val inputStream : InputStream) {
     }
 
     private fun nextChar() : Char {
-        return bytes[index++].toChar()
+        return bytes[index++]#if(!$ctx.jS).toChar()#else as Char#end
     }
 
     private fun peekChar() : Char {
-        return bytes[index].toChar()
+        return bytes[index]#if(!$ctx.jS).toChar()#else as Char#end
     }
 
     private fun isDone() : Boolean {
