when structure producing dead-code => replaced by if statement

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/json/JsonReader.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/json/JsonReader.vm
@@ -39,10 +39,7 @@ class JsonReader(ins: InputStream) {
     private fun doPeek(): Any? {
         token = lexer.nextToken()
         val t = token as Token
-        when (t.tokenType) {
-            Type.COLON, Type.COMMA -> doPeek()
-            else -> { /* do not re-peek */ }
-        }
+        if (t.tokenType == Type.COLON || t.tokenType == Type.COMMA) doPeek()
         return token
     }
 
