--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ModelCloner.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ModelCloner.vm
@@ -1,5 +1,5 @@
 #* @vtlvariable name="packageName" type="java.lang.String" *#
-#* @vtlvariable name="containerRootName" type="java.lang.String" *#
+#* @vtlvariable name="potentialRoots" type="java.util.ArrayList<org.eclipse.emf.ecore.EClassifier>" *#
 #* @vtlvariable name="ctx" type="org.kevoree.modeling.kotlin.generator.GenerationContext" *#
 #* @vtlvariable name="packages" type="java.util.Collection<java.lang.String>" *#
 #* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelperClass" *#
@@ -24,17 +24,21 @@ class ModelCloner {
     }
 
     private fun clone<A>(o : A,readOnly : Boolean,mutableOnly : Boolean) : A? {
-        if(o is ${containerRootName}) {
-             #if($ctx.jS)
-             val context = java.util.HashMap<Any,Any>()
-             #else
-             val context = java.util.IdentityHashMap<Any,Any>()
-             #end
+
+        #foreach($potentialRoot in $potentialRoots)
+            if(o is ${helper.fqn($ctx,$potentialRoot)}) {
+            #if($ctx.jS)
+                val context = java.util.HashMap<Any,Any>()
+            #else
+                val context = java.util.IdentityHashMap<Any,Any>()
+            #end
             (o as ${ctx.getKevoreeContainer().get()}).getClonelazy(context, mainFactory,mutableOnly)
             return (o as ${ctx.getKevoreeContainer().get()}).resolve(context,readOnly,mutableOnly) as A
-        } else {
-            return null
-        }
+            }
+
+
+        #end
+        return null
     }
          var mainFactory : ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.factory.MainFactory = ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.factory.MainFactory()
      #foreach($factoryFqn in $packages)
