--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
@@ -16,6 +16,7 @@ fun setInternalReadOnly()
 fun delete()
 
 fun modelEquals(similarObj : Any?) : Boolean
+fun containedElements() : Iterable<${packElem}.${formatedFactoryName}>
 
 #if(${ctx.genSelector})
     fun selectByQuery(query : String) : List<Any>
