--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/DeepIterator.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/DeepIterator.vm
@@ -6,7 +6,7 @@ package ${packElem}.util;
 public class DeepIterator(val root : ${ctx.getKevoreeContainer().get()}) : Iterator<${ctx.getKevoreeContainer().get()}> {
 
     private var currentObjSubIt : Iterator<${ctx.getKevoreeContainer().get()}>? = null;
-    private var currentObj : org.fsmsample.container.KMFContainer?  = null;
+    private var currentObj : ${ctx.getKevoreeContainer().get()}?  = null;
     private var rootElems : Iterator<${ctx.getKevoreeContainer().get()}> = root.containedElements().iterator()
 
     override fun hasNext() : Boolean {
