--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/SerializerEscapeXML.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/SerializerEscapeXML.vm
@@ -1,19 +1,26 @@
 
 
 private fun escapeXml(ostream : java.io.PrintStream, chain : String) {
-for( c in chain.toCharArray()) {
-if(c == '"') {
-ostream.print("&quot;")
-} else if(c == '&') {
-ostream.print("&amp;")
-} else if(c == '\'') {
-ostream.print("&apos;")
-} else if(c == '<') {
-ostream.print("&lt;")
-} else if(c == '>') {
-ostream.print("&gt;")
-} else {
-ostream.print(c)
-}
-}
+
+if(true){ostream.print(chain);return}   //TODO remove , set as option
+
+   var i = 0
+   var max = chain.length
+   while(i < max){
+        var c = chain.charAt(i)
+        if(c == '"') {
+            ostream.print("&quot;")
+        } else if(c == '&') {
+            ostream.print("&amp;")
+        } else if(c == '\'') {
+            ostream.print("&apos;")
+        } else if(c == '<') {
+            ostream.print("&lt;")
+        } else if(c == '>') {
+            ostream.print("&gt;")
+        } else {
+            ostream.print(c)
+        }
+        i = i + 1
+    }
 }
